--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,10 @@
-# Include parent (root) directory
-include_directories(..)
+add_subdirectory(common)
+add_subdirectory(periodic)
 
-# Get source file names
-file(GLOB SRC_FILES *.cpp)
+add_library(${LIB_NAME} STATIC common/.dummy.cxx)
 
-# Make a library from the source files
-add_library(${LIB_NAME} STATIC ${SRC_FILES})
-
-# Put the library in the bin directory
-set_target_properties(${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
-
-# Link any necessary libraries here:
-# target_link_libraries(${LIB_NAME} <external_library>)
+target_link_libraries(
+    ${LIB_NAME}
+    ${LIB_NAME}_common
+    ${LIB_NAME}_periodic
+)
