Added lookup table class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(common)
 add_subdirectory(periodic)
+add_subdirectory(lookup)
 
 add_library(${LIB_NAME} STATIC common/.dummy.cxx)
 
@@ -7,4 +8,5 @@ target_link_libraries(
     ${LIB_NAME}
     ${LIB_NAME}_common
     ${LIB_NAME}_periodic
+    ${LIB_NAME}_lookup
 )
