--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,52 @@ string(TOLOWER ${CMAKE_PROJECT_NAME} LIB_NAME)
 # Generate compile_commands.json for clangd
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-enable_testing()
-
 # Request C++ 11 standard features
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Make sure the compiler looks here for source files
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 
-include_directories(include/*/)
-add_subdirectory(src)
-add_subdirectory(test)
+
+### SOURCE CODE ###
+
+# Get a list of source files
+file(GLOB SRCS src/*.cpp)
+
+# Library of all source code
+add_library(${LIB_NAME} ${SRCS})
+# Put compiled library in bin
+set_target_properties(${LIB_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+
+
+
+### UNIT TESTING ###
+
+# Enable `make test` command
+enable_testing()
+
+# Make sure the compiler looks in the src directory
+include_directories(${PROJECT_SOURCE_DIR}/src)
+
+# Include test files
+file(GLOB TEST_SRCS ${PROJECT_SOURCE_DIR}/test/*.cpp)
+# Run through each test file
+foreach(testSrc ${TEST_SRCS})
+    # Get extension-less file name
+    get_filename_component(testName ${testSrc} NAME_WE)
+    # Add target
+    add_executable(${testName} ${testSrc})
+    # Link to Boost, source code and other external libraries
+    target_link_libraries(${testName} ${LIB_NAME})
+    # Put test executables in their own directory
+    set_target_properties(${testName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/test/bin)
+
+    # Add test to CTest execution
+    add_test(
+        NAME ${testName}
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test/bin
+        COMMAND ${testName}
+    )
+endforeach(testSrc)
