--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/framework"]
 	path = test/framework
-	url = https://gist.github.com/2c0b2b43d585975b9b8f7c1f218083f1.git
+	url = https://github.com/Quickeman/unit_test_framework.git
